# BasicEventEngine

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  BasicEventEngine  BasicEventEngine.dev  CMakeLists.txt  LICENSE  Makefile  Makefile.windows  README  README.md  build.bat  build.sh  config.sh  debug.hpp  event_order.txt  game.hpp  main.cpp  package.sh  resource_structures.hpp  valgrind.supp
bee/: CMakeLists.txt  all.hpp  debug.cpp  debug.hpp  defines.hpp  engine.cpp  engine.hpp  enum.hpp  fragment_shader.glsl  game.cpp  game.cpp~  game.hpp  game3d.hpp  resource_structures.cpp  resource_structures.hpp  resources.cpp  resources.hpp  util.cpp  util.hpp  vertex_shader.glsl
bee/core/: commands.cpp  console.cpp  console.hpp  display.cpp  display.hpp  enginestate.cpp  enginestate.hpp  input.cpp  input.hpp  instance.cpp  instance.hpp  keybind.cpp  keybind.hpp  loader.cpp  loader.hpp  resources.cpp  resources.hpp  room.cpp  room.hpp  rooms.cpp  rooms.hpp  serialdata.cpp  serialdata.hpp  sidp.cpp  sidp.hpp  soundeffects.cpp  soundeffects.hpp  statemachine.cpp  statemachine.hpp  window.cpp  window.hpp
bee/core/messenger/: messagecontents.cpp  messagecontents.hpp  messagerecipient.cpp  messagerecipient.hpp  messenger.cpp  messenger.hpp
bee/core/network/: network.cpp  network.hpp  networkclient.cpp  networkclient.hpp  networkdata.cpp  networkdata.hpp
bee/data/: serialdata.cpp  serialdata.hpp  sidp.cpp  sidp.hpp  statemachine.cpp  statemachine.hpp  variant.cpp  variant.hpp
bee/fs/: assimp.cpp  assimp.hpp  filemap.cpp  filemap.hpp  filepath.cpp  filepath.hpp  fs.cpp  fs.hpp  python.cpp  python.hpp
bee/game/: console.cpp  display.cpp  draw.cpp  info.cpp  input.cpp  messenger.cpp  network.cpp  resources.cpp  room.cpp  sidp.cpp  transition.cpp  window.cpp
bee/init/: gameoptions.cpp  gameoptions.hpp  info.cpp  info.hpp  programflags.cpp  programflags.hpp
bee/input/: kb.cpp  kb.hpp  keybind.cpp  keybind.hpp  keystrings.cpp  keystrings.hpp  mouse.cpp  mouse.hpp
bee/messenger/: messagecontents.cpp  messagecontents.hpp  messagerecipient.cpp  messagerecipient.hpp  messenger.cpp  messenger.hpp
bee/network/: client.cpp  client.hpp  connection.cpp  connection.hpp  data.cpp  data.hpp  event.cpp  event.hpp  network.cpp  network.hpp  networkclient.hpp  networkdata.cpp  networkdata.hpp  packet.cpp  packet.hpp
bee/physics/: body.cpp  body.hpp  draw.cpp  draw.hpp  filter.cpp  filter.hpp  physics.cpp  physics.hpp  world.cpp  world.hpp
bee/python/: beemodule.cpp  beemodule.hpp  commands.cpp  commands.hpp  console.cpp  console.hpp  fs.cpp  fs.hpp  instance.cpp  instance.hpp  kb.cpp  kb.hpp  loader.cpp  loader.hpp  messenger.cpp  messenger.hpp  mouse.cpp  mouse.hpp  net.cpp  net.hpp  physics.cpp  physics.hpp  python.cpp  python.hpp  render.cpp  render.hpp  structs.cpp  structs.hpp  ui.cpp  ui.hpp
bee/python/physics/: body.cpp  body.hpp  world.cpp  world.hpp
bee/python/resource/: font.cpp  font.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  path.cpp  path.hpp  room.cpp  room.hpp  script.cpp  script.hpp  sound.cpp  sound.hpp  texture.cpp  texture.hpp  timeline.cpp  timeline.hpp
bee/python/resources/: sound.cpp  sound.hpp  texture.cpp  texture.hpp
bee/render/: background.cpp  background.hpp  camera.cpp  camera.hpp  drawing.cpp  drawing.hpp  render.cpp  render.hpp  renderer.cpp  renderer.hpp  rgba.cpp  rgba.hpp  shader.cpp  shader.hpp  transition.cpp  transition.hpp  viewdata.cpp  viewdata.hpp  viewport.cpp  viewport.hpp
bee/render/particle/: attractor.cpp  attractor.hpp  changer.cpp  (+15 more)
bee/resource/: background.cpp  background.hpp  font.cpp  font.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  path.cpp  path.hpp  resource.hpp  room.cpp  room.hpp  script.cpp  script.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp  timeline.cpp  timeline.hpp
bee/resource_structures/: background.cpp  background.hpp  font.cpp  font.hpp  instancedata.cpp  instancedata.hpp  light.cpp  light.hpp  object.cpp  object.hpp  path.cpp  path.hpp  room.cpp  room.hpp  sound.cpp  sound.hpp  sound3d.hpp  sprite.cpp  sprite.hpp  timeline.cpp  timeline.hpp
bee/resources/: background.cpp  background.hpp  font.cpp  font.hpp  headers.hpp  light.cpp  light.hpp  mesh.cpp  mesh.hpp  object.cpp  object.hpp  path.cpp  path.hpp  room.cpp  room.hpp  sound.cpp  sound.hpp  sprite.cpp  sprite.hpp  timeline.cpp  timeline.hpp
bee/ui/: elements.hpp  ui.cpp  ui.hpp  widgets.hpp
bee/util/: archive.cpp  archive.hpp  collision.cpp  collision.hpp  curl.cpp  curl.hpp  dates.cpp  dates.hpp  debug.cpp  debug.hpp  files.cpp  files.hpp  messagebox.cpp  messagebox.hpp  network.cpp  network.hpp  networking.cpp  networking.hpp  platform.cpp  platform.hpp  real.cpp  real.hpp  script.hpp  sound.cpp  sound.hpp  soundeffects.cpp  soundeffects.hpp  string.cpp  string.hpp  string.hpp~  template.hpp  windefine.hpp
resources/: CMakeLists.txt  backfx.glsl  extras.hpp  fragment.glsl  fragment_basic.glsl  fragment_shader.glsl  geometry_shader.glsl  resources.cpp  resources.hpp  sidp.hpp  vertex.glsl  vertex_shader.glsl  vortex.glsl
resources/extras/: primitives.cpp  primitives.hpp
resources/lights/: lt_ambient.json  lt_bee.json
resources/meshes/: monkey2.blend  monkey2.mtl
resources/objects/: bee.hpp  control.hpp  obj_bee.cpp  obj_bee.hpp  obj_control.cpp  obj_control.hpp  obj_control.py  obj_enemy.cpp  obj_enemy.hpp  obj_lattice.cpp  obj_lattice.hpp  obj_menu.cpp  obj_menu.hpp  obj_mesh.py  obj_player.cpp  obj_player.hpp
resources/paths/: path_bee.json
resources/rooms/: boom.csv  crown.csv  eye.csv  hex.csv  rm_level_1.cpp  rm_level_1.hpp  rm_levels.cpp  rm_levels.hpp  rm_menu.cpp  rm_menu.hpp  rm_test.cpp  rm_test.csv  rm_test.hpp  rm_test2.py  rm_win.cpp  rm_win.hpp  shell.csv  spiral.csv  test.csv  test.hpp  test1.csv  theater.csv  toothy.csv
resources/scripts/: scr_test.py  scr_test1.py
resources/sprites/: bee.csv  enemy.csv  player.csv
resources/textures/: bk_vortex.xcf
resources/timelines/: tl_bee.cpp  tl_bee.hpp  tl_bee.py
(+138 files in other folders)
